--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html lang="he" dir="rtl">
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.css" rel="stylesheet" />
@@ -17,131 +17,149 @@
     <script src="jScripts/jquery-1.12.0.min.js"></script>
     <script src="jScripts/bootstrap.bundle.js"></script>
     <script src="jScripts/JavaScript.js"></script>
-
-
-</head>
-<body>
-
-
+  </head>
+  <body>
     <section id="opening">
+      <img src="styles/Asset 12.png" class="card-img" />
 
-        <img src="styles/Asset 12.png" class="card-img " />
-        
-        <div class="arrow_container">
-            <a href="#picback">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-            </a>
-        </div>
-
+      <div class="arrow_container">
+        <a href="#picback">
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+        </a>
+      </div>
     </section>
     <section id="picback" class="container-fluid">
-
-        <div class="container reveal">
-            <h1 class="header1">ברוכים הבאים לאתר של גן חבצלת</h1>
-            <div class="see"> בגן של נורית צוחקים נהנים וגם משחקים, באו לראות את התמונות של הילדים במהלך הגן</div>
-            <img id="backstyle1" src="styles/hart blueimagQ.png" />
-            <table class="table">
-                <tbody>
-                    <tr>
-
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs " /></td>
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                    </tr>
-                    <tr>
-
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                    </tr>
-                    <tr>
-
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                        <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
-                        <td>
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
-
-            <button id="morepics" class="btn btn-outline-primary">
-                רוצים לראות עוד תמונות? לחצו כאן
-            </button>
-            <img id="backstyle2" src="styles/hart pinkimagQ.png" />
+      <div class="container reveal">
+        <h1 class="header1">ברוכים הבאים לאתר של גן חבצלת</h1>
+        <div class="see">
+          בגן של נורית צוחקים נהנים וגם משחקים, באו לראות את התמונות של הילדים
+          במהלך הגן
         </div>
+        <img id="backstyle1" src="styles/hart blueimagQ.png" />
+        <table class="table">
+          <tbody>
+            <tr>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+            </tr>
+            <tr>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+            </tr>
+            <tr>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td><img src="styles/Asset 3.png" class="img-fluid imgs" /></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+
+        <button id="morepics" class="btn btn-outline-primary">
+          רוצים לראות עוד תמונות? לחצו כאן
+        </button>
+        <img id="backstyle2" src="styles/hart pinkimagQ.png" />
+      </div>
     </section>
     <section id="videosic">
-        <div class="container reveal">
-            <img id="backstyle3" src="styles/cloudimagQ.png" />
-            <h2 class="header">סרטוני הגן</h2>
-            <div class="see">
-                בסרטונים ניתן לראות את הילדים נהנים משתעשעים וצוחקים, הילדים שלכם הם הפנינים החשובות לי ביותר בעולם
-                ולכן אני מתייחסת אליהם בתאם לכך, כמו שניתן לראות בסרטונים אצלי בגן כלום נהנים שרים ורוקדים.
-            </div>
-
-            <table class="table">
-                <tbody>
-                    <tr>
-
-                        <td> <a href="https://www.youtube.com/watch?v=M9Z6bO8jUZ4" target="_blank"><img src="styles/Asset 4.png" class="img-fluid video" /></a></td>
-                        <td> <a href="https://www.youtube.com/watch?v=M9Z6bO8jUZ4" target="_blank"><img src="styles/Asset 4.png" class="img-fluid video" /></a></td>
-                        <td> <a href="https://www.youtube.com/watch?v=M9Z6bO8jUZ4" target="_blank"><img src="styles/Asset 4.png" class="img-fluid video" /></a></td>
-                    </tr>
-                    <tr>
-
-
-
-                </tbody>
-            </table>
-
-            <img id="backstyle4" src="styles/Asset 8.png" />
+      <div class="container reveal">
+        <img id="backstyle3" src="styles/cloudimagQ.png" />
+        <h2 class="header">סרטוני הגן</h2>
+        <div class="see">
+          בסרטונים ניתן לראות את הילדים נהנים משתעשעים וצוחקים, הילדים שלכם הם
+          הפנינים החשובות לי ביותר בעולם ולכן אני מתייחסת אליהם בתאם לכך, כמו
+          שניתן לראות בסרטונים אצלי בגן כלום נהנים שרים ורוקדים.
         </div>
+
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>
+                <a
+                  href="https://www.youtube.com/watch?v=M9Z6bO8jUZ4"
+                  target="_blank"
+                  ><img src="styles/Asset 4.png" class="img-fluid video"
+                /></a>
+              </td>
+              <td>
+                <a
+                  href="https://www.youtube.com/watch?v=M9Z6bO8jUZ4"
+                  target="_blank"
+                  ><img src="styles/Asset 4.png" class="img-fluid video"
+                /></a>
+              </td>
+              <td>
+                <a
+                  href="https://www.youtube.com/watch?v=M9Z6bO8jUZ4"
+                  target="_blank"
+                  ><img src="styles/Asset 4.png" class="img-fluid video"
+                /></a>
+              </td>
+            </tr>
+            <tr></tr>
+          </tbody>
+        </table>
+
+        <img id="backstyle4" src="styles/Asset 8.png" />
+      </div>
     </section>
     <section class="container-fluid" id="Ibelive">
-
-        <div class="container reveal ">
-            <img id="backstyle5" src="styles/sunimagQ.png" />
-            <img id="backstyle6" src="styles/hart pinkimagQ.png" />
-            <img id="backstyle7" src="styles/Asset 9.png" />
-            <h2 class="header">"אני מאמין, זה הורה מאמין" </h2>
-            <div id="speech">
-                <p>
-                    לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, נולום ארווס סאפיאן - פוסיליס קוויס, אקווזמן גולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם בורק?
-                    לתיג ישבעס.
-
-                    ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם בורק?
-                    לתיג ישבעס.
-
-                    הועניב היושבב שערש שמחויט - שלושע ותלברו חשלו שעותלשך וחאית נובש ערששף. זותה מנק הבקיץ אפאח דלאמת <br> יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם הכייר וק.
-
-                </p>
-                <p>
-                    ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם בורק? לתיג ישבעס.
-
-                    מוסן מנת. להאמית קרהשק סכעיט דז מא, מנכם למטכין נשואי מנורך. צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. <br>עמחליף קולהע צופעט למרקוח איבן איף, ברומץ כלרשט מיחוצים.<br> קלאצי סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט -
-                    לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך רוגצה. לפמעט
-
-                    סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט - לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך רוגצה. לפמעט מוסן מנת.
-                    קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
-
-                </p>
-                נולום ארווס סאפיאן - פוסיליס קוויס, אקווזמן קוואזי במר מודוף. אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי קוואזי במר מודוף<br>. אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
-
-                נולום ארווס סאפיאן - פוסיליס קוויס, אקווזמן קוואזי במר מודוף. <br>אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף
-            </div>
+      <div class="container reveal">
+        <img id="backstyle5" src="styles/sunimagQ.png" />
+        <img id="backstyle6" src="styles/hart pinkimagQ.png" />
+        <img id="backstyle7" src="styles/Asset 9.png" />
+        <h2 class="header">"אני מאמין, זה הורה מאמין"</h2>
+        <div id="speech">
+          <p>
+            לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית גולר מונפרר
+            סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, נולום ארווס סאפיאן -
+            פוסיליס קוויס, אקווזמן גולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר
+            גק ליץ, ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך
+            וסתעד לכנו סתשם השמה - לתכי מורגם בורק? לתיג ישבעס. ליבם סולגק.
+            בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה -
+            לתכי מורגם בורק? לתיג ישבעס. הועניב היושבב שערש שמחויט - שלושע
+            ותלברו חשלו שעותלשך וחאית נובש ערששף. זותה מנק הבקיץ אפאח דלאמת
+            <br />
+            יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם הכייר וק.
+          </p>
+          <p>
+            ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד
+            לכנו סתשם השמה - לתכי מורגם בורק? לתיג ישבעס. מוסן מנת. להאמית קרהשק
+            סכעיט דז מא, מנכם למטכין נשואי מנורך. צש בליא, מנסוטו צמלח לביקו
+            ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום סילקוף, מרגשי
+            ומרגשח. <br />עמחליף קולהע צופעט למרקוח איבן איף, ברומץ כלרשט
+            מיחוצים.<br />
+            קלאצי סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט -
+            לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך רוגצה. לפמעט
+            סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט - לפתיעם
+            ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך רוגצה. לפמעט מוסן מנת.
+            קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק
+            לרטי.
+          </p>
+          נולום ארווס סאפיאן - פוסיליס קוויס, אקווזמן קוואזי במר מודוף. אודיפו
+          בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ
+          תתיח לרעח. לת צשחמי קוואזי במר מודוף<br />. אודיפו בלאסטיק מונופץ
+          קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת
+          צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
+          נולום ארווס סאפיאן - פוסיליס קוויס, אקווזמן קוואזי במר מודוף.
+          <br />אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף
         </div>
+      </div>
     </section>
     <section class="container-fluid" id="keepintouch">
-        <div class="container-fluid" align="center">
-            בואו דברו איתי - מייל: Ganhavatzelet@gmail.com | טלפון: 054-552-3344
-            |  פייסבוק:&nbsp;
-            <a href="https://www.facebook.com/profile.php?id=100004326370907" target="_blank">גן חבצלת </a><img id="facebook"  src="styles/Asset 10.png" /> 
-            
-            </div>
+      <div class="container-fluid" align="center">
+        בואו דברו איתי - מייל: Ganhavatzelet@gmail.com | טלפון: 054-552-3344 |
+        פייסבוק:&nbsp;
+        <a
+          href="https://www.facebook.com/profile.php?id=100004326370907"
+          target="_blank"
+          >גן חבצלת </a
+        ><img id="facebook" src="styles/Asset 10.png" />
+      </div>
     </section>
-</body>
+  </body>
 </html>
